# mini-sage

./: .gitignore  Cargo.toml
benches/: c_benchmark.rs  llvm_benchmark.rs
examples/: libexample.c
examples/benchmarks/: 3body.c  3body.mg  mandelbrot.c  mandelbrot.mg  matmul.c  matmul.mg
examples/demo/: mandelbrot.mg
examples/expected-fail/: unmatched-braces.mg
examples/expected-pass/: array.mg  ffi.c  hello-world.mg  mandelbrot.c  mandelbrot.mg  mandelbrot.out  mandelbrot.out.txt  trig.c  trig.mg  trig.out  trig.out.txt
src/: interpreter.rs  lib.rs  main.rs  parser.rs  symbol.rs
src/compiler_backends/: c.rs  llvm.rs  mod.rs
src/lir/: interpreter.rs  mod.rs  parser.rs
src/lir/compiler_backends/: c.rs  llvm.rs  mod.rs
src/lir/util/: interactive.rs  testing.rs
src/util/: interactive.rs  mod.rs  testing.rs
tests/: examples.rs
