[package]
name = "mage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "llvm_benchmark"
harness = false

[[bench]]
name = "c_benchmark"
harness = false

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.23", features = ["derive"] }
lazy_static = "1.5.0"
maplit = "1.0.2"
nom = "7.1.3"
rustyline = "15.0.0"
tracing = "0.1"
tracing-subscriber = "0.3.0"
